# ibayesanfight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst
MT/gam生成/: DOWNPSN.CFG  MAIN.LST  MAKEPSN.BAT  downhpsn.c  magictower.lst  mtowerdata.lst  mtowerfar.lst  mtowerfar2.lst  mtowerfar3.lst
MT/图片/: Thumbs.db
MT/图片/其他/: Thumbs.db
MT/文档/: 对话.txt  怪物数据.txt  游戏说明.doc
MT/源文件/: BUILD.BAT  MAIN.C  MAIN.CFG  MTowerData.c  MTowerFar.c  MTowerFar2.c  MTowerFar3.c  MagicTower.c  mtower.h
baye-ios/Baye/: Info.plist  LCDView.h  LCDView.m  MacViewController.m
baye-ios/Baye-iOS/: GamLCDView.m  GamTouchPadView.m  Info.plist  ViewController.m
baye-ios/MoTa/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
baye-ios/baye-ios.xcodeproj/: project.pbxproj
js/: genver.py  whitelist.json
src/: CMakeLists.txt  FgtCount.c  FgtPkAi.c  Fight.c  FightSub.c  PublicFun.c  Size.c  bind-objects.c  citycmd.c  citycmdb.c  citycmdc.c  citycmdd.c  citycmde.c  cityedit.c  comIn.c  comOut.c  config.c  dat.lib  data-bind.c  datman.c  debug.c  fsys.c  gamEng.c  infdeal.c  itoa.c  itoa.h  paccount.c  pconst.c  showface.c  tactic.c  touch.c  touch.h  updateversion.py  varma.c  version.c
src/baye/: attribute.h  bind-objects.h  comm.h  compa.h  consdef.h  data-bind.h  datman.h  enghead.h  extern.h  fight.h  fsys.h  fundec.h  graph.h  order.h  paccount.h  script.h  sharefun.h  stdsys.h
src/baye/CVS/: Entries  Entries.Extra  Repository  Root
src/data/: pconst.h
src/inc/: DictAfx.h  dictsys.h  flash.h  fsys.h
src/platform/common/: bios.c  gui.c  sys.c
src/platform/ios/: bios.c  dummy-script.c  fsys.c  gui.c  sem.h  sem.m  sys.c  timer.h  timer.m
src/platform/js/: dat.lib.c  exportjs.c  fsys.c  main.c  script.c  sem.c  timer.c
src/platform/win/: game.c  timer.c  window.c
(+114 files in other folders)
